[package]
name = "vsh"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"

[dependencies]
async_core = { path = "../cros/platform/crosvm/async_core" }
cros_async = { path = "../cros/platform/crosvm/cros_async" }
dbus = "0.8"
futures = "0.3"
getopts = "0.2"
libc = "0.2.67"
libchromeos = { path = "../cros/platform2/libchromeos-rs" }
log = "0.4"
protobuf = "2.10"
remain = "0.2"
sys_util = { path = "../cros/platform/crosvm/sys_util" }
#system_api = { path = "system_api" }
vsh_proto = { path = "vsh_proto" }

[build-dependencies]
protoc-rust = "2.10"

[dev-dependencies]
tempfile = { path = "../cros/platform/crosvm/tempfile" }

[workspace]
# TODO(smbarber): remove this exclusion
exclude = ["system_api"]
